<resources>
    <string name="app_name">layout best</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hymart Menu</string>
    <string name="nav_header_subtitle">made by @iasstudio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Keluar</string>

    <string name="menu_home">Hymart</string>
    <string name="menu_makanan">Makanan dan Minuman</string>
    <string name="menu_dapur">Rumah dan Dapur</string>
    <string name="menu_sehat">Kesehatan dan Kecantikan</string>
    <string name="menu_anak">Ibu dan Anak</string>
    <string name="todo">TODO</string>
</resources>