<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_makanan"
            android:icon="@drawable/ic_makanan"
            android:title="@string/menu_makanan" />
        <item
            android:id="@+id/nav_dapur"
            android:icon="@drawable/ic_dapur"
            android:title="@string/menu_dapur" />
        <item
            android:id="@+id/nav_sehat"
            android:icon="@drawable/ic_sehat"
            android:title="@string/menu_sehat" />
        <item
            android:id="@+id/nav_anak"
            android:icon="@drawable/ic_anak"
            android:title="@string/menu_anak" />

    </group>
</menu>